[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Tower.gd" type="Script" id=1]
[ext_resource path="res://textures/tower.png" type="Texture" id=2]
[ext_resource path="res://music/shoot.wav" type="AudioStream" id=3]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 171.103

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 30.3568, 30.4134 )

[node name="Tower" type="StaticBody2D"]

input_pickable = true
collision_layer = 2
collision_mask = 5
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Collision" ]

[node name="Sprite" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="." index="1"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 1 )

[node name="FireTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = false
autostart = true

[node name="Shot" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 3 )
volume_db = -17.27
autoplay = false
mix_target = 0
bus = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="4"]

shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]

[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]


